feat: 添加Vercel部署支持
- 添加vercel.json配置文件
- 创建API入口文件 api/index.js
- 修改package.json构建脚本以生成public目录
- 适配server.js以支持serverless环境
- 修改数据库路径以适配Vercel临时文件系统
- 支持生产环境和开发环境的条件启动

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node backend/server.js",
     "dev": "nodemon backend/server.js",
-    "build": "echo 'Build completed'",
-    "install-deps": "npm install"
+    "build": "mkdir -p public && cp -r frontend/* public/",
+    "install-deps": "npm install",
+    "vercel-build": "mkdir -p public && cp -r frontend/* public/"
   },
   "keywords": ["customer", "management", "crm", "客服系统"],
   "author": "AI Assistant",
