fix: 修复Vercel部署404错误
- 简化vercel.json配置，使用现代化的rewrites语法
- 将静态文件移动到根目录，符合Vercel默认静态文件服务
- 更新package.json构建脚本
- 确保index.html在根目录可被正确访问

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "dev": "nodemon backend/server.js",
-    "build": "mkdir -p public && cp -r frontend/* public/",
+    "dev": "node backend/server.js",
+    "build": "echo 'Build completed'",
     "install-deps": "npm install",
-    "vercel-build": "mkdir -p public && cp -r frontend/* public/"
+    "vercel-build": "echo 'Build completed'"
   },
   "keywords": ["customer", "management", "crm", "客服系统"],
   "author": "AI Assistant",
